--- a/timeline/index.scss
+++ b/timeline/index.scss
@@ -12,7 +12,16 @@ html, body {
   height:100%;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+}
+
 #main-container {
-  width:100%;
-  height:100%;
+  flex:1;
+}
+
+#timeline {
+  flex: 0 0 200px;
+  background-color: #444;
 }
