Some header design

--- a/timeline/index.scss
+++ b/timeline/index.scss
@@ -1,4 +1,5 @@
 @import './App/index';
+@import './Header/index';
 @import './DetailsPanel/index';
 @import './TimelinePanel/index';
 @import './TimelineEvent/index';
