Change selectedItem in timeline to a simple index, more CSS and add description field for an event

--- a/timeline/DetailsPanel/index.scss
+++ b/timeline/DetailsPanel/index.scss
@@ -1,5 +1,14 @@
-#DetailsPanel {
+.DetailsPanel {
   flex: 1;
   position: relative;
   padding: 1rem;
+
+  &__description {
+    display: flex;
+    min-height: 200px;
+
+    &--field{
+      flex:1;
+    }
+  }
 }
