Add the ability to create custom width events

--- a/timeline/TimelineEvent/index.scss
+++ b/timeline/TimelineEvent/index.scss
@@ -1,9 +1,8 @@
 .TimelineEvent {
   position: absolute;
-  background-color: #a4ff00;
+  background-color: #7289da;
   border:1px solid #000;
-  height:16px;
-  min-width: 16px;
+  padding:8px;
   border-radius: 8px;
   cursor: pointer;
   z-index: 2;
