--- a/timeline/index.scss
+++ b/timeline/index.scss
@@ -3,6 +3,7 @@
 @import './DetailsPanel/index';
 @import './TimelinePanel/index';
 @import './TimelineEvent/index';
+@import './TimelineSection/index';
 
 html, body {
   padding: 0;
